--- a/task-list-style.css
+++ b/task-list-style.css
@@ -15957,15 +15957,8 @@ x:-moz-any-link {
 }
 
 .govuk-summary-list {
-  border-bottom: 1px solid black;
   padding-bottom: 15px;
-  list-style-type: block !important;
-}
-
-li {
-  border-bottom: 1px solid black !important;
-  padding-bottom: 15px  !important;
-  list-style-type: block !important;
+  list-style-type: none !important;
 }
 
 .govuk-prototype-kit-task-list__section {
