--- a/task-list-style.css
+++ b/task-list-style.css
@@ -15989,6 +15989,13 @@ a:hover, .govuk-link:hover {
   color: #003078;
 }
 
+/* Buttons with a link - fixing it  */
+
+.govuk-button.govuk-button--secondary {
+  position: relative;
+  bottom: 10px;
+}
+
 
 
 
